# traffic_data

./: Cargo.toml  index.html
src/: main.rs
src/data/: mod.rs  simple.rs  typed_dataset.rs  urls.rs
